@@ -48,6 +48,9 @@ Version 0.7.2.I20080801-1500 release date: 1 August 2008
 	 * Stack overflow while disconnecting a project (bug 241814)
 	   + special thanks to Vadim Dmitriev
 	
+	 * NPE in MergePanel.getSelection (bug 242753)
+	   + special thanks to Igor Fedorenko
+	
 	 * New resources are not decorated as outgoing changes (bug 242248)
 	   + special thanks to Igor Fedorenko
 	
